# gazebo_simulation_ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: fake_ros_control.yaml  gazebo_control.yaml
launch/: my_model_gazebo_launch.launch  mycobot_fake_control.launch
script/: mycobot_control_python.py  mycobot_hardware_interface.py
urdf/: mycobot_280_m5.urdf
worlds/: my_world.world
