<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulation_ros</name>
  <version>0.0.0</version>
  <description>The gazebo_simulation_ros package</description>

  <maintainer email="crowsky7275@gmail.com">root</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <export>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
  
</package>
